// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Focus: renders outline when tabbing into focus, but not when clicking 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.25rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  outline: none;
  -webkit-transition: border 80ms;
  transition: border 80ms;
  vertical-align: middle;
  white-space: nowrap;
  font-size: 1rem;
  height: 36px;
  padding-left: 1rem;
  padding-right: 1rem;
}

.c0[disabled] {
  cursor: default;
  -webkit-filter: grayscale(0.3);
  filter: grayscale(0.3);
  opacity: 0.25;
}

.c1 {
  background: #6C43E0;
  border: 1px solid #6C43E0;
  color: #FFFFFF;
}

.c1:active,
.c1.active {
  background: #412399;
  border-color: #412399;
}

.c1:hover,
.c1:focus,
.c1.hover {
  background: #4F2ABA;
  border-color: #4F2ABA;
}

.c1[disabled]:hover,
.c1[disabled]:active,
.c1[disabled]:focus {
  background-color: #6C43E0;
  border-color: #C1C6CC;
}

<button
  class="c0 c1"
>
  focus
</button>
`;

exports[`Button Focus: renders outline when tabbing into focus, but not when clicking 2`] = `
<button
  class="sc-bxivhb byEMEJ sc-ifAKCX sc-EHOje kAurnO"
>
  focus
</button>
`;

exports[`Button disable 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.25rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  outline: none;
  -webkit-transition: border 80ms;
  transition: border 80ms;
  vertical-align: middle;
  white-space: nowrap;
  font-size: 1rem;
  height: 36px;
  padding-left: 1rem;
  padding-right: 1rem;
}

.c0[disabled] {
  cursor: default;
  -webkit-filter: grayscale(0.3);
  filter: grayscale(0.3);
  opacity: 0.25;
}

.c1 {
  background: #6C43E0;
  border: 1px solid #6C43E0;
  color: #FFFFFF;
}

.c1:active,
.c1.active {
  background: #412399;
  border-color: #412399;
}

.c1:hover,
.c1:focus,
.c1.hover {
  background: #4F2ABA;
  border-color: #4F2ABA;
}

.c1[disabled]:hover,
.c1[disabled]:active,
.c1[disabled]:focus {
  background-color: #6C43E0;
  border-color: #C1C6CC;
}

<button
  class="c0 c1"
  disabled=""
>
  disabled
</button>
`;

exports[`Button is rendered  1`] = `ShallowWrapper {}`;

exports[`Button validates all sizes 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.25rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  outline: none;
  -webkit-transition: border 80ms;
  transition: border 80ms;
  vertical-align: middle;
  white-space: nowrap;
  font-size: 0.75rem;
  height: 24px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c0[disabled] {
  cursor: default;
  -webkit-filter: grayscale(0.3);
  filter: grayscale(0.3);
  opacity: 0.25;
}

.c1 {
  background: #6C43E0;
  border: 1px solid #6C43E0;
  color: #FFFFFF;
}

.c1:active,
.c1.active {
  background: #412399;
  border-color: #412399;
}

.c1:hover,
.c1:focus,
.c1.hover {
  background: #4F2ABA;
  border-color: #4F2ABA;
}

.c1[disabled]:hover,
.c1[disabled]:active,
.c1[disabled]:focus {
  background-color: #6C43E0;
  border-color: #C1C6CC;
}

<button
  class="c0 c1"
>
  xsmall button
</button>
`;

exports[`Button validates all sizes 2`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.25rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  outline: none;
  -webkit-transition: border 80ms;
  transition: border 80ms;
  vertical-align: middle;
  white-space: nowrap;
  font-size: 0.875rem;
  height: 28px;
  padding-left: 0.75rem;
  padding-right: 0.75rem;
}

.c0[disabled] {
  cursor: default;
  -webkit-filter: grayscale(0.3);
  filter: grayscale(0.3);
  opacity: 0.25;
}

.c1 {
  background: #6C43E0;
  border: 1px solid #6C43E0;
  color: #FFFFFF;
}

.c1:active,
.c1.active {
  background: #412399;
  border-color: #412399;
}

.c1:hover,
.c1:focus,
.c1.hover {
  background: #4F2ABA;
  border-color: #4F2ABA;
}

.c1[disabled]:hover,
.c1[disabled]:active,
.c1[disabled]:focus {
  background-color: #6C43E0;
  border-color: #C1C6CC;
}

<button
  class="c0 c1"
>
  small button
</button>
`;

exports[`Button validates all sizes 3`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.25rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  outline: none;
  -webkit-transition: border 80ms;
  transition: border 80ms;
  vertical-align: middle;
  white-space: nowrap;
  font-size: 1rem;
  height: 36px;
  padding-left: 1rem;
  padding-right: 1rem;
}

.c0[disabled] {
  cursor: default;
  -webkit-filter: grayscale(0.3);
  filter: grayscale(0.3);
  opacity: 0.25;
}

.c1 {
  background: #6C43E0;
  border: 1px solid #6C43E0;
  color: #FFFFFF;
}

.c1:active,
.c1.active {
  background: #412399;
  border-color: #412399;
}

.c1:hover,
.c1:focus,
.c1.hover {
  background: #4F2ABA;
  border-color: #4F2ABA;
}

.c1[disabled]:hover,
.c1[disabled]:active,
.c1[disabled]:focus {
  background-color: #6C43E0;
  border-color: #C1C6CC;
}

<button
  class="c0 c1"
>
  medium button
</button>
`;

exports[`Button validates all sizes 4`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.25rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  outline: none;
  -webkit-transition: border 80ms;
  transition: border 80ms;
  vertical-align: middle;
  white-space: nowrap;
  font-size: 1.375rem;
  height: 44px;
  padding-left: 1.25rem;
  padding-right: 1.25rem;
}

.c0[disabled] {
  cursor: default;
  -webkit-filter: grayscale(0.3);
  filter: grayscale(0.3);
  opacity: 0.25;
}

.c1 {
  background: #6C43E0;
  border: 1px solid #6C43E0;
  color: #FFFFFF;
}

.c1:active,
.c1.active {
  background: #412399;
  border-color: #412399;
}

.c1:hover,
.c1:focus,
.c1.hover {
  background: #4F2ABA;
  border-color: #4F2ABA;
}

.c1[disabled]:hover,
.c1[disabled]:active,
.c1[disabled]:focus {
  background-color: #6C43E0;
  border-color: #C1C6CC;
}

<button
  class="c0 c1"
>
  large button
</button>
`;

exports[`Button works with color danger 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.25rem;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  outline: none;
  -webkit-transition: border 80ms;
  transition: border 80ms;
  vertical-align: middle;
  white-space: nowrap;
  font-size: 1rem;
  height: 36px;
  padding-left: 1rem;
  padding-right: 1rem;
}

.c0[disabled] {
  cursor: default;
  -webkit-filter: grayscale(0.3);
  filter: grayscale(0.3);
  opacity: 0.25;
}

.c1 {
  background: #CC1F36;
  border: 1px solid #CC1F36;
  color: #FFFFFF;
}

.c1:active,
.c1.active {
  background: #990F14;
  border-color: #990F14;
}

.c1:hover,
.c1:focus,
.c1.hover {
  background: #B2121F;
  border-color: #B2121F;
}

.c1[disabled]:hover,
.c1[disabled]:active,
.c1[disabled]:focus {
  background-color: #CC1F36;
  border-color: #C1C6CC;
}

<button
  class="c0 c1"
  color="danger"
>
  danger
</button>
`;
